--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -26,7 +26,7 @@ rss:
 # Remove leading slashes ( "/archives" -> "archives" )
 menu:
   home: /
-  #categories: /categories
+  categories: /categories
   #about: /about
   archives: /archives
   tags: /tags
@@ -70,9 +70,9 @@ scheme: Mist
 #  - always  expand for all pages automatically
 #  - hide    expand only when click on the sidebar toggle icon.
 #  - remove  Totally remove sidebar including sidebar toggle icon.
-#sidebar: post
-sidebar: always
-#sidebar: hide
+sidebar: post
+# sidebar: always
+# sidebar: hide
 #sidebar: remove
 
 
