angular数据双向绑定bug

--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ creative_commons: by-nc-sa
 
 # Google Webmaster tools verification setting(谷歌统计)
 # See: https://www.google.com/webmasters/
-google_site_verification: VvyjvVXcJQa0QklHipu6pwm2PJGnnchIqX7s5JbbT_0
+# google_site_verification: VvyjvVXcJQa0QklHipu6pwm2PJGnnchIqX7s5JbbT_0
 
 # Google Analytics
 # Google分析ID
