谷歌统计与百度自动推送

--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ creative_commons: by-nc-sa
 
 # Google Analytics
 # Google分析ID
-google_analytics:
+google_analytics: UA-78168343-1
 # 百度分析ID
 baidu_analytics: df56565927da6b6824f57415bffe96cf
 
