添加本地搜索插件并完善文章分类

--- a/_config.yml
+++ b/_config.yml
@@ -109,6 +109,9 @@ path: sitemap.xml
 baidusitemap:
 path: baidusitemap.xml
 
+search:
+  path: search.xml
+  field: post
 
 # Specify the date when the site was setup
 since: 2015
