--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: http://hexo.io/plugins/
 ## Themes: http://hexo.io/themes/
-theme: landscape
+theme: next
 
 # Duoshuo
 duoshuo_shortname: tangqing
