--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -59,8 +59,8 @@ menu_icons:
 
 # Schemes
 # scheme: Muse
-scheme: Mist
-# scheme: Pisces
+# scheme: Mist
+scheme: Pisces
 
 
 # ---------------------------------------------------------------
@@ -331,7 +331,7 @@ baidu_push: true
 
 reward_comment: 坚持原创技术分享，您的支持将鼓励我继续创作！
 wechatpay: /uploads/weixin_reward.png
-# alipay: /path/to/alipay-reward-image
+alipay: /uploads/zhifubao_reward.jpg
 
 
 #! ---------------------------------------------------------------
