--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -173,12 +173,16 @@ sidebar:
   #display: hide
   #display: remove
 
-# Blogrolls
 #links_title: Links
 #links_layout: block
 #links_layout: inline
 #links:
   #Title: http://example.com/
+links_title: 友情链接
+links_layout: inline
+links:
+  '飞哥的博客': http://peterfei.github.io/
+  '阿峰的博客': https://dhyl.github.io/
 
 # ---------------------------------------------------------------
 # Misc Theme Settings
