--- a/_config.yml
+++ b/_config.yml
@@ -137,6 +137,29 @@ markdown:
 stylus:
   compress: false
 
+# minifier html,css,js,image
+html_minifier:
+  enable: true
+  exclude: 
+css_minifier:
+  enable: true
+  exclude: 
+    - '*.min.css'
+js_minifier:
+  enable: true
+  mangle: true
+  output:
+  compress:
+  exclude: 
+    - '*.min.js'
+image_minifier:
+  enable: true
+  interlaced: false
+  multipass: false
+  optimizationLevel: 2
+  pngquant: false
+  progressive: false
+
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
 deploy:
