修改代码块的样式

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -183,7 +183,7 @@ links_layout: inline
 links:
   '飞哥的博客': http://peterfei.github.io/
   '阿峰的博客': https://dhyl.github.io/
-  '你若盛开,蝴蝶自来！你若精彩,天自安排！· IT姑凉博客': http://itguliang.github.io/
+  'IT姑凉博客': http://itguliang.github.io/
 
 # ---------------------------------------------------------------
 # Misc Theme Settings
