多说显示操作系统

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -247,9 +247,6 @@ mathjax:
 #baidu_analytics:
 # baidu_tongji: true
 
-# Duoshuo ShortName
-#duoshuo_shortname:
-
 # Disqus
 #disqus_shortname:
 
@@ -283,7 +280,7 @@ mathjax:
 # you can visit http://dev.duoshuo.com get duoshuo user id.
 duoshuo_info:
   ua_enable: true
-  admin_enable: false
+  admin_enable: true
   user_id: 0
   #admin_nickname: Author
 
