--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -281,8 +281,8 @@ mathjax:
 duoshuo_info:
   ua_enable: true
   admin_enable: true
-  user_id: 0
-  #admin_nickname: Author
+  user_id: 14142146
+  admin_nickname: 假装酷酷的博主
 
 # Facebook SDK Support.
 # https://github.com/iissnan/hexo-theme-next/pull/410
