--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -184,6 +184,7 @@ links:
   '飞哥的博客': http://peterfei.github.io/
   '阿峰的博客': https://dhyl.github.io/
   'IT姑凉博客': http://itguliang.github.io/
+  '  博の客  ': https://xqlsq.github.io/
 
 # ---------------------------------------------------------------
 # Misc Theme Settings
