--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -275,15 +275,8 @@ mathjax:
 # CNZZ count
 #cnzz_siteid:
 
-
-# Make duoshuo show UA
-# user_id must NOT be null when admin_enable is true!
-# you can visit http://dev.duoshuo.com get duoshuo user id.
-duoshuo_info:
-  ua_enable: true
-  admin_enable: true
-  user_id: 14142146
-  admin_nickname: 假装酷酷的博主
+# 来必力
+livere_uid: MTAyMC8zMDEwOC82NjYz
 
 # Facebook SDK Support.
 # https://github.com/iissnan/hexo-theme-next/pull/410
