--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "hexo-renderer-ejs": "^0.1.0",
     "hexo-renderer-marked": "^0.2.4",
     "hexo-renderer-stylus": "^0.3.0",
-    "hexo-server": "^0.1.2"
+    "hexo-server": "^0.1.2",
+    "valine": "^1.1.9-beta9"
   }
 }
