--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -477,9 +477,9 @@ changyan:
 # more info please open https://valine.js.org
 valine:
   enable: true # 是否开启
-  appid: MSPJlp223GTtrQkjTTUFj8nK # 填上之前获取的AppID
+  appid: MSPJlp223GTtrQkjTTUFj8nK-gzGzoHsz # 填上之前获取的AppID
   appkey: 7ISVCzDLXieg6RS64MOmkYt4 # 填上之前获取的AppKey
-  notify: false # 新留言是否需要通知 https://github.com/xCss/Valine/wiki
+  notify: true # 新留言是否需要通知 https://github.com/xCss/Valine/wiki
   verify: false # 是否需要验证，验证比较反人类建议false关闭
   placeholder: 请在此输入您的留言 # 默认留言框内的文字
   avatar: mm # 默认头像
