--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -280,10 +280,10 @@ codeblock:
   border_radius: 
 
 # Wechat Subscriber
-#wechat_subscriber:
-  #enabled: true
-  #qcode: /path/to/your/wechatqcode ex. /uploads/wechat-qcode.jpg
-  #description: ex. subscribe to my blog by scanning my public wechat account
+wechat_subscriber:
+  enabled: true
+  qcode: /uploads/wechat-qcode.jpg
+  description: 欢迎关注我的微信公众号，里面有各种小故事哦！
 
 # Reward
 reward_comment: 坚持原创技术分享，您的支持将鼓励我继续创作！
