--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -119,7 +119,7 @@ menu:
   categories: /categories/ || th-list
   tags: /tags/ || tags 
   about: /about/ || user
-  #schedule: /schedule/ || calendar
+  # schedule: /schedule/ || calendar
   #sitemap: /sitemap.xml || sitemap
   #commonweal: /404/ || heartbeat
 
@@ -639,7 +639,7 @@ firestore:
 # Show Views/Visitors of the website/page with busuanzi.
 # Get more information on http://ibruce.info/2015/04/04/busuanzi/
 busuanzi_count:
-  enable: false
+  enable: true
   total_visitors: true
   total_visitors_icon: user
   total_views: true
