博客语言使用中文，添加原创声明

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: 堂的博客
 subtitle: 给岁月以学习,而不是给学习以岁月
 description: 道不同不相为谋,懒懒的继续编程......
 author: 堂
-# language: zh-CN
+language: zh-CN
 email: LCX6916356@163.com #联系邮箱
 timezone:
 avatar: /uploads/avatar.jpg
