--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -479,7 +479,7 @@ valine:
   enable: true # 是否开启
   appid: MSPJlp223GTtrQkjTTUFj8nK-gzGzoHsz # 填上之前获取的AppID
   appkey: 7ISVCzDLXieg6RS64MOmkYt4 # 填上之前获取的AppKey
-  notify: true # 新留言是否需要通知 https://github.com/xCss/Valine/wiki
+  notify: false # 新留言是否需要通知 https://github.com/xCss/Valine/wiki
   verify: false # 是否需要验证，验证比较反人类建议false关闭
   placeholder: 请在此输入您的留言 # 默认留言框内的文字
   avatar: mm # 默认头像
@@ -937,11 +937,6 @@ vendors:
   # https://github.com/theme-next/theme-next-reading-progress
   # Example: https://cdn.jsdelivr.net/gh/theme-next/theme-next-reading-progress@1.1/reading_progress.min.js
   reading_progress:
-
-  # valine comment
-  # Example: https://cdn.jsdelivr.net/npm/valine@1.1.8/dist/Valine.min.js
-  valine:
-
 
 # Assets
 css: css
