--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -844,7 +844,7 @@ vendors:
   _internal: lib
 
   # Internal version: 2.1.3
-  jquery: //cdn.bootcss.com/jquery/2.1.3/jquery.min.js
+  jquery: //cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js
 
   # Internal version: 2.1.5
   # See: http://fancyapps.com/fancybox/
