--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -184,7 +184,9 @@ links_title: 友情链接
 links_layout: inline
 links:
   '飞哥的博客': http://peterfei.github.io/
-  '阿峰的博客': https://dhyl.github.io/
+  # '阿峰的博客': https://dhyl.github.io/
+  '治元的博客': https://amazingmoon.github.io/
+  '长安曹公子': https://webcaolixin.github.io
   'IT姑凉博客': http://itguliang.github.io/
   '  博の客  ': https://xqlsq.github.io/
 
