flutter 使用 ci 打包

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -481,10 +481,10 @@ valine:
   enable: true # 是否开启
   appid: MSPJlp223GTtrQkjTTUFj8nK-gzGzoHsz # 填上之前获取的AppID
   appkey: 7ISVCzDLXieg6RS64MOmkYt4 # 填上之前获取的AppKey
-  notify: false # 新留言是否需要通知 https://github.com/xCss/Valine/wiki
+  notify: true # 新留言是否需要通知 https://github.com/xCss/Valine/wiki
   verify: false # 是否需要验证，验证比较反人类建议false关闭
   placeholder: 请在此输入您的留言 # 默认留言框内的文字
-  avatar: mm # 默认头像
+  avatar: wavatar # 默认头像
   guest_info: nick,mail # 默认留言框的头部需要访问者输入的信息
   pageSize: 10 # pagination size #默认单页的留言条数
 
