--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ avatar: /uploads/avatar.jpg
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://jintang.github.io/
+url: https://jintang.github.io/
 root: /
-permalink: :year/:month/:day/:title/
+permalink: :title/
 permalink_defaults:
 
 # Directory
@@ -32,6 +32,7 @@ skip_render:
 # Writing
 new_post_name: :title.md # File name of new posts
 default_layout: post
+auto_spacing: true
 titlecase: false # Transform title into titlecase
 external_link: true # Open external links in new tab
 filename_case: 0
@@ -49,14 +50,6 @@ highlight:
 default_category: uncategorized
 category_map:
 tag_map:
-
-# Archives
-## 2: Enable pagination
-## 1: Disable pagination
-## 0: Fully Disable
-archive: 2
-category: 2
-tag: 2
 
 # Date / Time format
 ## Hexo uses Moment.js to parse and display date
@@ -168,3 +161,24 @@ deploy:
   repository: git@github.com:jintang/jintang.github.io.git
   branch: master
 - type: baidu_url_submitter ## 这是新加的
+
+live2d:
+  enable: true
+  scriptFrom: local
+  pluginRootPath: live2dw/
+  pluginJsPath: lib/
+  pluginModelPath: assets/
+  tagMode: false
+  log: true
+  model:
+    use: live2d-widget-model-hijiki live2d-widget-model-tororo
+    # use: live2d-widget-model-epsilon2_1 live2d-widget-model-hibiki live2d-widget-model-shizuku live2d-widget-model-z16
+  display:
+    position: right
+    width: 150
+    height: 300
+  mobile:
+    show: true
+    scale: 0.5
+  react:
+    opacity: 0.7
