--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.2.2"
+    "version": "3.9.0"
   },
   "dependencies": {
-    "hexo": "^3.1.1",
+    "hexo": "^3.9.0",
     "hexo-all-minifier": "0.0.14",
     "hexo-baidu-url-submit": "0.0.5",
     "hexo-deployer-git": "0.0.4",
@@ -19,7 +19,7 @@
     "hexo-generator-search": "^1.0.2",
     "hexo-generator-sitemap": "^1.1.2",
     "hexo-generator-tag": "^0.1.1",
-    "hexo-helper-live2d": "^3.1.1",
+    "hexo-helper-live2d": "git+https://github.com/jintangWang/hexo-helper-live2d.git",
     "hexo-renderer-ejs": "^0.1.0",
     "hexo-renderer-marked": "^0.2.4",
     "hexo-renderer-stylus": "^0.3.0",
